--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<html>
+    <head>
 
+    </head>
+    <body>
+        <h1>Statistics</h1>
+        <title>What is Statistics</title>
+        <main>
+            <p>Practice and study of collecting and analyzing data</p>
+            <p>Statistics helps to answer the following question: 
+                <ul>
+                    <li>Likelyhood customer to purchase a product</li>
+                    <li>Customer preference of purchased method</li>
+                    <li>How many occupants in a hotel</li>
+                    <li>How to optimise occupancy</li>
+                    <li>How many sizes of jeans need to be manufacture to fit 95% population</li>
+                    <li>A/B test: Which ad or which web layout effective to pull in customer </li>
+                </ul>
+            </p>
+        </main>
+
+        <section>
+            <header>Types of Statistics</header>
+            <main>
+                <ul>
+                    <li>Descriptive Statistics</li>
+                        <p>Describe and summarize data</p>
+                    <li>Inferential Statistics</li>
+                        <p>Use a sample of data to make inferences about larger population</p>
+                </ul>
+            </main>
+        </section>
+        
+        <section>
+            <header>Types of data</header>
+            <h1>Numeric (Quantitative) </h1>
+            <ul>
+                <li>
+                    Continuous (Measure)
+                    <ul>
+                        <li>Airplane speed</li>
+                        <li>Time spent waiting in line</li>
+                    </ul>
+                </li>
+                <li>
+                    Discrete (Counted)
+                    <ul>
+                        <li>Number of pets</li>
+                        <li>Number of packages shipped</li>
+                    </ul>
+                </li>
+            </ul>
+            
+        </section>
+    </body>
+</html>
